Update contact email and phone number in about.html

--- a/about.html
+++ b/about.html
@@ -40,8 +40,8 @@
             </div>
             <div class="glass-card">
                 <h3 style="color: var(--secondary);">Contact Us</h3>
-                <p>Email: <a href="mailto:contact@techevent.com" style="color: #fff; text-decoration: underline;">contact@techevent.com</a></p>
-                <p>Phone: +1 (555) 012-3456</p>
+                <p>Email: <a href="mailto:contact@techevent.co" style="color: #fff; text-decoration: underline;">contact@techevent.com</a></p>
+                <p>Phone: +91 7989405968 </p>
             </div>
         </div>
     </div>
